--- a/mina-benchmarks/pom.xml
+++ b/mina-benchmarks/pom.xml
@@ -56,5 +56,11 @@
      <artifactId>slf4j-api</artifactId>
      <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty</artifactId>
+      <version>3.7.0.Final</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
